--- a/static/stat562/note_stat562.Rmd
+++ b/static/stat562/note_stat562.Rmd
@@ -185,6 +185,10 @@ Definition: $V[X|Y]=E[(X-E[X|Y])^2|Y]$
 
 `2019.01.08``p.2-3`
 
+Example 4.4.1 (Binomial-Poisson hierarchy)
+
+Example 4.4.2 (Continuation of Example 4.4.1)
+
 **Theorem 4.4.3 Law of iterated Expectation** if X and Y are any two random variables, then
 
 $$EX=E(E(X|Y))$$
@@ -196,6 +200,12 @@ Proof:**Law of iterated expectations**
 $$E(E(X|Y))=\int_{-\infty}^{\infty}E[X|y]g(y)dy=\int_{-\infty}^{\infty}\left[\int_{-\infty}^{\infty}xf(x|y)dx\right]g(y)dy=\int_{-\infty}^{\infty}\left[\int_{-\infty}^{\infty}x\frac{f(x,y)}{g(y)}dx\right]g(y)dy$$
 
 $$=\int_{-\infty}^{\infty}\left[\int_{-\infty}^{\infty}{f(x,y)dy}\right]xdx=\int_{-\infty}^{\infty}f_X(x)xdx=E[X]$$
+
+Definition 4.4.4 mixture distribution
+
+Example 4.4.5 (Generalization of Example 4.4.1)
+
+Example 4.4.6 (Beta-binomial hierarchy)
 
 **Theorem 4.4.7 (Conditional variance identity)** For any two random varibles X and Y,
 
@@ -342,6 +352,8 @@ Therefore, the correlation equals $\pm1$ iff Y is a perfect linear function of X
 
 **Definition 4.5.10** bivariate normal pdf with $\mu_X,\mu_Y,\sigma_X^2,\sigma_Y^2, \rho$
 
+$f(x,y)=\frac{1}{2\pi\sigma_X\sigma_Y\sqrt{1-\rho^2}}e^{-\frac{1}{2(1-\rho^2)}[(\frac{x-\mu_X}{\sigma_X})^2-2\rho(\frac{x-\mu_X}{\sigma_X})(\frac{y-\mu_Y}{\sigma_Y})+(\frac{y-\mu_Y}{\sigma_Y})^2]}$
+
 $f_X(x)\sim n(\mu_X,\sigma^2_X)$ $f_Y(y)\sim n(\mu_Y,\sigma^2_Y)$
 
 $f_{Y|X}(y|x) \sim n(\mu_Y+\rho\frac{\sigma_Y}{\sigma_X})(x−\mu_X),\sigma_Y^2(1-\rho^2)$
@@ -356,13 +368,19 @@ $aX+bY\sim n(a\mu_X+b\mu_Y,a^2\mu_X^2+b^2\mu_Y^2+2ab\rho\sigma_X\sigma_Y$
 
 **Definition 4.6.5** mutually independent random vectors
 
-**Theorem 4.6.6 (Generalization of Theorem 4.2. 10)**
+**Theorem 4.6.6 (Generalization of Theorem 4.2.10)**
 
 $$E(g_1(X_1)\cdots g_n(X_n))=(E(g_1(X_1))\cdots(E(g_n(X_n))$$
 
 **Theorem 4.6.7 (Generalization of Theorem 4.2.12)**
 
 $$M_Z(t)=(M_X(t))^n$$
+
+Example 4.6.8 (Mgf of a sum of gamma variables)
+
+Corollary 4.6.9
+
+Corollary 4.6.10
 
 **Theorem 4.6.11 (Generalization of Lemma 4.2.1)** Let $X_1,.., X_n$ be random vectors. Then $X_1,.., X_n$ are mutually independent random vectors if and only if there exist functions $g_i(X_i),i=1,..,n$, such that the joint pdf or pmf of ($X_1,..,X_n$) can be written as
 
@@ -415,7 +433,11 @@ Squaring both sides and using statistical notation, we have $(Cov(X, y))^2\le \s
 
 Recalling the definition of the correlation coefficient,$\rho$, we have proved that $-1\le \rho^2\le1$1. Furthermore, the condition for equality in Lemma 4.7.1 still carries over, and equality is attained here only if $(X-\mu_X)=c(Y-\mu_Y)$, for some constant c. That is, the correlation is $\pm1$ **if and only if X and Y are linearly related**.
 
+Theorem 4.7.5 (Minkowski's Inequality)
+
 ### 4.7.2 Functional Inequalities
+
+Definition 4.7.6 convex
 
 **Theorem 4.7.7 (Jensen's Inequality)**
 
@@ -531,22 +553,25 @@ Thus, again applying Theorem 3.5.6, we find that if $g(z)$ is the pdf of $\bar Z
 and $f(z)$ to find the pdf $g(z)$ of $\bar Z$. If this is done, the parameters $\mu$, and $\sigma$ do not have
 to be dealt with, which may make the computations less messy. Then we immediately know that the pdf of $\bar X$ is $(\frac1\sigma)g(\frac{x-\mu}{\sigma})$.
 
-In Example 5.2. 10, we found that if $Z_1,..,Z_n$ is a random sample from a $Cauchy(0,1)$ distribution, then Z also has a $Cauchy(0,1)$ distribution. Now we can conclude that if $X_1,..,X_n$ is a random sample from a $Cauchy(\mu,\sigma)$ distribution, then $\bar X$ also has a $Cauchy(\mu,\sigma)$ distribution. It is important to note that the dispersion in the distribution of $\bar X$, as measured by $\sigma$, is the same, regardless of the sample size $n$. This is in sharp contrast to the more common situation in Theorem 5.2.6 (the population has finite variance) , where $Var\bar X=\frac{\sigma^2}n$ decreases as the sample size increases.
+In Example 5.2.10, we found that if $Z_1,..,Z_n$ is a random sample from a $Cauchy(0,1)$ distribution, then Z also has a $Cauchy(0,1)$ distribution. Now we can conclude that if $X_1,..,X_n$ is a random sample from a $Cauchy(\mu,\sigma)$ distribution, then $\bar X$ also has a $Cauchy(\mu,\sigma)$ distribution. It is important to note that the dispersion in the distribution of $\bar X$, as measured by $\sigma$, is the same, regardless of the sample size $n$. This is in sharp contrast to the more common situation in Theorem 5.2.6 (the population has finite variance) , where $Var\bar X=\frac{\sigma^2}n$ decreases as the sample size increases.
 
 
 ## 5.3 Sampling from the Normal Distribution
 
 ### 5.3.1 Properties of the Sample Mean and Variance
 
-**Theorem 5.3.1** 
+**Theorem 5.3.1** Let $X_1,..,X_n$ be a random sample from a $n (\mu,\sigma^2)$ distribution, and let $\bar X=(1/n)\sum_{i=1}^nX_i$ and $S^2=[1/(n-1)]\sum_{i=1}^n(X_i-\bar X)^2$ Then
 
+ a. $\bar X$ and $\sigma^2$ are independent random variables.
+ b. $\bar X$ has a $n(\mu,\sigma^2/n)$ distribution,
+ c. $(n-1)S^2/\sigma^2$ has a chi squared distribution with n-1 degrees of freedom.
 
 $$ f_{\chi^2}(x)=\frac{x^{\frac{p}2-1}}{\Gamma \frac{p}2 2^{\frac{p}2}}e^{-\frac{x}2}, x>0$$
 
-**Lemma 5.3.2**
+**Lemma 5.3.2 (Facts about chi squared random variables)** 
 
 
-**Lemma 5.3.3**
+**Lemma 5.3.3 independent**
 `2019.01.24``p.1`
 
 $U=\sum_{i=1}^na_ix_i, V=\sum_{j=1}^nb_jx_j$
@@ -640,7 +665,7 @@ that is, $\bar X_n$ converges almost surely to $\mu$
 
 ### 5.5.3 Convergence in Distribution
 
-**Definition 5.5.10** A sequence of random variables, $X_1,X_2,..$, converges in distribution to a random variable $X$ if
+**Definition 5.5.10** A sequence of random variables, $X_1,X_2,..$, _converges in distribution_ to a random variable $X$ if
 $$\lim_{n\to\infty}F_{X_n}(x)=F_X(x)$$
 at all points $x$ where $F_X(x)$ is continuous.
 
@@ -659,9 +684,7 @@ $$\lim_{n\to\infty}G_n(x)=\int_{-\infty}^x\frac1{\sqrt{2\pi}}e^{-\frac{y^2}2}dy$
 
 that is, $\frac{\sqrt n(\bar X_n-\mu)}{\sigma}$ has a limiting standard normal distribution. 
 
-$$\underrightarrow{p}\quad \lim_{\substack{x\to\infty\\y\to\infty}}()$$
-
-**Theorem 5.5.15 (Stronger (orm of the Central Limit Theorem)**
+**Theorem 5.5.15 (Stronger form of the Central Limit Theorem)**
 
 **Example 5.5.16 (Normal approximation to the negative binomial)**
 
@@ -813,11 +836,11 @@ is also a minimal sufficient statistic.
 
 >CONDITIONALITY PRINCIPLE
 
-**Example 6.3.4 (Binomial/negative binomial experiment)**
+**Example 6.3.5 (Binomial/negative binomial experiment)**
 
 **Theorem 6.3.6 (Birnbaum's Theorem)** The Formal Likelihood Principle follows from the Formal Sufficiency Principle and the Conditionality Principle. The converse is also true.
 
-**Example 6.3.7 ( Continuation of Example 6.3.5)**
+**Example 6.3.7 (Continuation of Example 6.3.5)**
 
 ## 6.4 The Equivariance Principle
 
@@ -835,7 +858,7 @@ Sometimes the third requirement,
 
   (iii) (Identity) The identity, $e(\vec x)$, defined by $e(\vec x)=\vec x$ is an element of $\mathcal{G}$, is stated as part of the definition of a group. But (iii) is a consequence of (i) and (ii) and need not be verified separately.
 
-**Example 6.4.3 ( Continuation of Example 6.4.1)**
+**Example 6.4.3 (Continuation of Example 6.4.1)**
 
 **Definition 6.4.4** Let $\mathcal{F}=\{f(\vec x|\theta):\theta\in\Theta\}$ be a set of pdfs or pmfs for $\vec X$, and let $\mathcal{G}$ be a group of transformations of the sample space $\mathcal{X}$. Then $\mathcal{F}$ is _invariant under the group_ $\mathcal{G}$ if for every $\theta\in\Theta$ and $g\in\mathcal{G}$ there exists a unique $\theta'\in\Theta$ such that $\vec Y=g(\vec X)$ has the distribution $f(\vec y|\theta')$ if $\vec X$ has the distribution $f(\vec x|\theta)$.
 
