--- a/docs/stat563/qe_math_stat.Rmd
+++ b/docs/stat563/qe_math_stat.Rmd
@@ -2524,7 +2524,7 @@ Let $X_1,X_2,..,X_n$ be a random sample from a normal distribution $N(\mu,\sigma
 Solve these two equations. Round up if n is not an integer. Hint: $z_{.05}=1.645$ and $z_{.1}=1.28$
 
 ### 2019SB2 
-[2004F8][] [2007F4B][] [2013FB4][] [2015S3B][] [2018S1B][] [Laplace](Laplace) [MLE][#MLE]
+[2004F8][] [2007F4B][] [2013FB4][] [2015S3B][] [2018S1B][] [Laplace](Laplace) (MLE)
 [7.E.13][]
 
 Let $X_1,X_2,..,X_9$ be a random sample of size 9 from a distribution with pdf
@@ -2535,7 +2535,7 @@ where $-\infty<\theta<\infty$ is unknown.
 Find the m.l.e. of $\theta$ and find its bias.
 
 ### 2019SB3 
-[2003S9][] [2004F9][] [2007F5B][] [2015S4B][] [2018S3B][] [#SPower] [#power][] [#UMP](#UMP)
+[2003S9][] [2004F9][] [2007F5B][] [2015S4B][] [2018S3B][] (SPower) (power) (UMP)
 
 Suppose $X_1,X_2,..,X_n$ is a random sample from a distribution with pdf
 
@@ -2589,7 +2589,7 @@ where $\theta>-1$ is an unknown parameter.
 ## 2.1 Distributions o f Functions of a Random Variable
 ## 2.2 Expected Values
 
-2.2.1 expected value {#mean} $Eg(X)=\sum_{-\infty ^\infty g(x)f_X(x)dx$
+2.2.1 expected value {#mean} $Eg(X)=\sum_{-\infty}^\infty g(x)f_X(x)dx$
 
 ## 2.3 Moments and Moment Generating Functions
 
@@ -2627,15 +2627,15 @@ where $\theta>-1$ is an unknown parameter.
 
 Standard Normal distribution {#SNorm}
 
-3.3.16 Beta distribution {#Beta} $B(\alpha,\beta)=\frac{Gamma(\alpha)+Gamma(\beta) {\Gamma(\alpha+\beta) $, $EX^n=\frac{B(\alpha+n,\beta) {B(\alpha,\beta) =\frac{Gamma(\alpha+n)+Gamma(\alpha+\beta) {\Gamma(\alpha+\beta+n)Gamma(\alpha) $, $EX=\frac{\alpha {\alpha+\beta $, $VarX=\frac{\alpha\beta {(\alpha+\beta)^2(\alpha+\beta+1)$ 
+3.3.16 Beta distribution {#Beta} $B(\alpha,\beta)=\frac{Gamma(\alpha)+Gamma(\beta)}{\Gamma(\alpha+\beta)}$, $EX^n=\frac{B(\alpha+n,\beta)}{B(\alpha,\beta)}=\frac{Gamma(\alpha+n)+Gamma(\alpha+\beta)}{\Gamma(\alpha+\beta+n)Gamma(\alpha)}$, $EX=\frac{\alpha} {\alpha+\beta}$, $VarX=\frac{\alpha\beta}{(\alpha+\beta)^2(\alpha+\beta+1)}$ 
 
 3.3.19 Cauchy Distribution {#Cauchy}
 
 3.3.21 Lognormal Distribution {#LNorm}
 
-3.3.22 Laplace/Double Exponential distribution {#Laplace}
+3.3.22 Laplace/Double Exponential distribution   {#Laplace}
 
-Standard Power distribution {#SPower}
+Standard Power distribution   {#SPower}
 
 ## 3.4 Exponential Families
 ## 3.5 Location and Scale Families
@@ -2650,7 +2650,7 @@ Chebychev inequality {#Cheb}
 
 3.E.23 Pareto distribution {#Pareto}
 
-3.E.17 $E[X^k]=\frac{\beta^k\Gamma(k+\alpha) {\Gamma(\alpha)$ {#GammaE}
+3.E.17 $E[X^k]=\frac{\beta^k\Gamma(k+\alpha)}{\Gamma(\alpha)}$ {#GammaE}
 
 # 4. Multiple Random Variables
 ## 4.1 Joint and Marginal Distributions
