--- a/static/stat563/qe_math_stat.Rmd
+++ b/static/stat563/qe_math_stat.Rmd
@@ -2524,7 +2524,7 @@ Let $X_1,X_2,..,X_n$ be a random sample from a normal distribution $N(\mu,\sigma
 Solve these two equations. Round up if n is not an integer. Hint: $z_{.05}=1.645$ and $z_{.1}=1.28$
 
 ### 2019SB2 
-[2004F8][] [2007F4B][] [2013FB4][] [2015S3B][] [2018S1B][] [Laplace](#Laplace) (MLE)
+[2004F8][] [2007F4B][] [2013FB4][] [2015S3B][] [2018S1B][] [Laplace](#Laplace) [MLE](#MLE)
 [7.E.13][]
 
 Let $X_1,X_2,..,X_9$ be a random sample of size 9 from a distribution with pdf
@@ -2535,7 +2535,7 @@ where $-\infty<\theta<\infty$ is unknown.
 Find the m.l.e. of $\theta$ and find its bias.
 
 ### 2019SB3 
-[2003S9][] [2004F9][] [2007F5B][] [2015S4B][] [2018S3B][] [SPower](#SPower) [power](power) (UMP)
+[2003S9][] [2004F9][] [2007F5B][] [2015S4B][] [2018S3B][] [SPower](#SPower) [power](#power) [UMP](#UMP)
 
 Suppose $X_1,X_2,..,X_n$ is a random sample from a distribution with pdf
 
@@ -3421,7 +3421,7 @@ Example 8.3.7 (Size of LRT)
 
 ### 8.3.2 Most Powerful Tests
 
-**Definition 8.3.11 uniformly most powerful** {#UMP}
+#### **Definition 8.3.11 uniformly most powerful**   {#UMP}
 
 **Theorem 8.3.12 (Neyman-Pearson Lemma)** {#Neym-Pear}
 
