--- a/docs/stat563/qe_math_stat.Rmd
+++ b/docs/stat563/qe_math_stat.Rmd
@@ -2577,9 +2577,10 @@ where $\theta>-1$ is an unknown parameter.
 ## 1.4 Random Variables
 ## 1.5 Distribution Functions
 
-1.5.1 Cumulative distribution function {#CDF} $F_X(x)=P_X(X\le x)$ 
+#### 1.5.1 Cumulative distribution function {#CDF} 
+$F_X(x)=P_X(X\le x)$ 
 
-1.5.3 three conditions of c.d.f. {#cdfP}
+#### 1.5.3 three conditions of c.d.f. {#cdfP}
 
 ## 1.6 Density and Mass Functions
 
@@ -2589,13 +2590,15 @@ where $\theta>-1$ is an unknown parameter.
 ## 2.1 Distributions o f Functions of a Random Variable
 ## 2.2 Expected Values
 
-2.2.1 expected value {#mean} $Eg(X)=\sum_{-\infty}^\infty g(x)f_X(x)dx$
+#### 2.2.1 expected value {#mean} 
+$Eg(X)=\sum_{-\infty}^\infty g(x)f_X(x)dx$
 
 ## 2.3 Moments and Moment Generating Functions
 
-2.3.2 variance {#Var} $Var[X]=E(X-EX)^2$
+#### 2.3.2 variance {#Var} 
+$Var[X]=E(X-EX)^2$
 
-2.3.6 moment generating function {#MGF}
+#### 2.3.6 moment generating function {#MGF}
 
 ## 2.4 Differentiating Under an Integral Sign
 
@@ -2603,39 +2606,40 @@ where $\theta>-1$ is an unknown parameter.
 ## 3.1 Introduction
 ## 3.2 Discrete Distributions
 
-3.2.1 Bernoulli distribution (p) {#Bern}
+#### 3.2.1 Bernoulli distribution (p) {#Bern}
 
-3.2.2 Binomial distribution (n,p) {#Bino}
+#### 3.2.2 Binomial distribution (n,p) {#Bino}
 
-3.2.5 Poisson distribution $\lambda$ {#Pois}
+#### 3.2.5 Poisson distribution $\lambda$ {#Pois}
 
-3.2.7 Failure times {#failtime}
+#### 3.2.7 Failure times {#failtime}
 
-3.2.11 Geometric Distribution {#Geom}
+#### 3.2.11 Geometric Distribution {#Geom}
 
 ## 3.3 Continuous Distributions
 
-3.3.1 Uniform distribution (a,b) {#Unif}
+#### 3.3.1 Uniform distribution (a,b) {#Unif}
 
-3.3.6 Gamma Distribution {#Gamma}
+#### 3.3.6 Gamma Distribution {#Gamma}
 
-3.3.11 Exponential distribution {#Expo}
+#### 3.3.11 Exponential distribution {#Expo}
 
-3.3.12 Weibull distribution {#Weib}
+#### 3.3.12 Weibull distribution {#Weib}
 
-3.3.13 Normal distribution {#Norm}
+#### 3.3.13 Normal distribution {#Norm}
 
-Standard Normal distribution {#SNorm}
+#### Standard Normal distribution {#SNorm}
 
-3.3.16 Beta distribution {#Beta} $B(\alpha,\beta)=\frac{Gamma(\alpha)+Gamma(\beta)}{\Gamma(\alpha+\beta)}$, $EX^n=\frac{B(\alpha+n,\beta)}{B(\alpha,\beta)}=\frac{Gamma(\alpha+n)+Gamma(\alpha+\beta)}{\Gamma(\alpha+\beta+n)Gamma(\alpha)}$, $EX=\frac{\alpha} {\alpha+\beta}$, $VarX=\frac{\alpha\beta}{(\alpha+\beta)^2(\alpha+\beta+1)}$ 
+#### 3.3.16 Beta distribution {#Beta}
+$B(\alpha,\beta)=\frac{Gamma(\alpha)+Gamma(\beta)}{\Gamma(\alpha+\beta)}$, $EX^n=\frac{B(\alpha+n,\beta)}{B(\alpha,\beta)}=\frac{Gamma(\alpha+n)+Gamma(\alpha+\beta)}{\Gamma(\alpha+\beta+n)Gamma(\alpha)}$, $EX=\frac{\alpha} {\alpha+\beta}$, $VarX=\frac{\alpha\beta}{(\alpha+\beta)^2(\alpha+\beta+1)}$ 
 
-3.3.19 Cauchy Distribution {#Cauchy}
+#### 3.3.19 Cauchy Distribution {#Cauchy}
 
-3.3.21 Lognormal Distribution {#LNorm}
+#### 3.3.21 Lognormal Distribution {#LNorm}
 
-3.3.22 Laplace/Double Exponential distribution   {#Laplace}
+#### 3.3.22 Laplace/Double Exponential distribution    {#Laplace}
 
-Standard Power distribution   {#SPower}
+ - Standard Power distribution   {#SPower}
 
 ## 3.4 Exponential Families
 ## 3.5 Location and Scale Families
