--- a/docs/stat563/qe_math_stat.Rmd
+++ b/docs/stat563/qe_math_stat.Rmd
@@ -2584,7 +2584,8 @@ $F_X(x)=P_X(X\le x)$
 
 ## 1.6 Density and Mass Functions
 
-1.6.1 probability density function {#PDF} $F_X(x)=P_X(X= x)$
+#### 1.6.1 probability density function {#PDF} 
+$F_X(x)=P_X(X= x)$
 
 # 2 Transformations and Expectations
 ## 2.1 Distributions o f Functions of a Random Variable
@@ -2639,35 +2640,35 @@ $B(\alpha,\beta)=\frac{Gamma(\alpha)+Gamma(\beta)}{\Gamma(\alpha+\beta)}$, $EX^n
 
 #### 3.3.22 Laplace/Double Exponential distribution    {#Laplace}
 
- - Standard Power distribution   {#SPower}
+#### Standard Power distribution   {#SPower}
 
 ## 3.4 Exponential Families
 ## 3.5 Location and Scale Families
 ## 3.6 Inequalities and Identities
 ### 3.6.1 Probability Inequalities
 
-Chebychev inequality {#Cheb}
+#### Chebychev inequality {#Cheb}
 
 ### 3.6.2 Identities
  
 ## 3.E
 
-3.E.23 Pareto distribution {#Pareto}
+#### 3.E.23 Pareto distribution {#Pareto}
 
-3.E.17 $E[X^k]=\frac{\beta^k\Gamma(k+\alpha)}{\Gamma(\alpha)}$ {#GammaE}
+#### 3.E.17 $E[X^k]=\frac{\beta^k\Gamma(k+\alpha)}{\Gamma(\alpha)}$ {#GammaE}
 
 # 4. Multiple Random Variables
 ## 4.1 Joint and Marginal Distributions
 
-4.1.3 marginal probability density functions {#marg}
+#### 4.1.3 marginal probability density functions {#marg}
 
-4.1.10 joint pdf {#joint}
+#### 4.1.10 joint pdf {#joint}
 
 ## 4.2 Conditional D istributions and Independence
 
-4.2.4 Calculating conditional pdfs {#cond}
+#### 4.2.4 Calculating conditional pdfs {#cond}
 
-4.2.5 independent {#indep-1}
+#### 4.2.5 independent {#indep-1}
 
 
 ## 4.3 Bivariate Transformations {#trans}
@@ -2686,7 +2687,8 @@ $X,Y$ indep, $U=XY$, $f_U(u)\sim n(\alpha,\beta+\gamma)$
 $X\sim n(0,1)$, $Y\sim n(0,1)$
 $X,Y$ indep, $X-Y\sim n(0,2)$, $X-Y\sim n(0,2)$
 
-**Theorem 4.3.5** {#indep-2} Let X and Y be independent random variables. Let $g(x)$ be a function only of a; and $h(y)$ be a function only of y. Then the random variables $U=g(X)$ and $V=h(Y)$ are independent.
+#### **Theorem 4.3.5** {#indep-2} 
+Let X and Y be independent random variables. Let $g(x)$ be a function only of a; and $h(y)$ be a function only of y. Then the random variables $U=g(X)$ and $V=h(Y)$ are independent.
 
 **Example 4.3.6 (Distribution of the ratio of normal variables)**
 
@@ -2714,10 +2716,12 @@ $VarX=E(Var(X|Y))+Var(E(X|Y))$
 
 ## 4.5 Covariance and Correlation
 
-**Definition 4.5.1** {#Cov} The covariance of X and Y is the number defined by
+#### **Definition 4.5.1** {#Cov} 
+The covariance of X and Y is the number defined by
 $Cov(X,Y)=E((X-\mu_X)(Y-\mu_Y))=\sigma_{XY}$
 
-**Definition 4.5.2** {#Cor} The correlation of X and Y is the number defined by 
+#### **Definition 4.5.2** {#Cor} 
+The correlation of X and Y is the number defined by 
 $\rho_{XY}=\frac{\sigma_{XY}}{\sigma_X\sigma_Y};\quad Corr(X,Y)=\frac{Cov(X,Y)}{\sqrt{Var(X)Var(Y)}}$
 
 **Theorem 4.5.3** For any two random varibles X and Y,
@@ -2725,9 +2729,9 @@ $\sigma_{XY}=Cov(X,Y)=E[XY]-\mu_X\mu_Y$
 
 Properties of $Cov(x,y)$
 
-$$\begin{array}{l} Cov(aX,bY)=abCov(X,Y) & (1)\\
-Cov(X,Y+Z)=Cov(X,Y)+Cov(X,Z)  & (2) \\
-Cov(X,c)=0  & (3) \end{array}$$
+$Cov(aX,bY)=abCov(X,Y)\quad (1)$
+$Cov(X,Y+Z)=Cov(X,Y)+Cov(X,Z)\quad (2)$
+$Cov(X,c)=0\quad (3)$
 
 $$Cov(X,X)=E[X^2]-\mu_X^2$$
 
@@ -2738,11 +2742,10 @@ $$Cov(X,X)=E[X^2]-\mu_X^2$$
 Always check if X and Y are independent. When $y=x^2$, X and Y are dependent, but $Cov(X,Y)=0$
 
 **Theorem 4.5.6** If X and Y are any two random variables and a and b are any two constants, then
+$Var(aX+bY)=a^2VarX+b^2VarY+2abCov(X,Y)$
 
-$$Var(aX+bY)=a^2VarX+b^2VarY+2abCov(X,Y)$$
 If X and Y are independent random variables, then
-
-$$Var(aX+bY)=a^2VarX+b^2VarY$$
+$Var(aX+bY)=a^2VarX+b^2VarY$
 
 **Theorem 4.5.7** For any random variables X and Y,
 
@@ -2754,7 +2757,8 @@ $$Var(aX+bY)=a^2VarX+b^2VarY$$
 **Example 4.5.9 (Correlation-III)**
 
 
-**Definition 4.5.10** bivariate normal pdf with $\mu_X,\mu_Y,\sigma_X^2,\sigma_Y^2, \rho$
+#### **Definition 4.5.10** bivariate normal pdf 
+with $\mu_X,\mu_Y,\sigma_X^2,\sigma_Y^2, \rho$
 
 $f(x,y)=\frac{1}{2\pi\sigma_X\sigma_Y\sqrt{1-\rho^2}}e^{-\frac{1}{2(1-\rho^2)}[(\frac{x-\mu_X}{\sigma_X})^2-2\rho(\frac{x-\mu_X}{\sigma_X})(\frac{y-\mu_Y}{\sigma_Y})+(\frac{y-\mu_Y}{\sigma_Y})^2]}$
 
@@ -2781,8 +2785,7 @@ Example 4.6.3 (Multivariate pmf)
 $$E(g_1(X_1)\cdots g_n(X_n))=(E(g_1(X_1))\cdots(E(g_n(X_n))$$
 
 **Theorem 4.6.7 (Generalization of Theorem 4.2.12)**
-
-$$M_Z(t)=(M_X(t))^n$$
+$M_Z(t)=(M_X(t))^n$
 
 Example 4.6.8 (Mgf of a sum of gamma variables)
 
@@ -2816,23 +2819,24 @@ Definition 4.7.6 convex
 
 **Example 4.7.8 (An inequality for means)** Jensen's Inequality can be used to prove an inequality between three different kinds of means. If $a_1,..,a_n$ are positive numbers, define
 
-$$\begin{array}{l} a_A=\frac1n(a_1+a_2+..+a_n)&\text{(arithmetic mean)}\\a_G=[a_1a_2\cdots a_n]^{\frac1n}&\text{(geometric mean)}\\a_H=\frac{1}{\frac1n(\frac1{a_1}+\frac1{a_2}+..+\frac1{a_n})}&\text{(harmonic mean)} \end{array}$$
+arithmetic mean $a_A=\frac1n(a_1+a_2+..+a_n)$
+geometric mean $a_G=[a_1a_2\cdots a_n]^{\frac1n}$
+harmonic mean $a_H=\frac{1}{\frac1n(\frac1{a_1}+\frac1{a_2}+..+\frac1{a_n})}$
 
 An inequality relating these means is $a_H\le a_G\le a_A$
 
 **Theorem 4.7.9 (Covariance Inequality)**
 
   a. If $g(x)$ is a nondecreasing function and h(x)$ is a nonincreasing junction, then
-$$E(g(X)h(X))\le(Eg(X))(Eh(X))$$
+$E(g(X)h(X))\le(Eg(X))(Eh(X))$
 
   b. If $g(x)$ and $h(x)$ are either both nondecreasing or both nonincreasing, then
-$$E(g(X)h(X))\ge(Eg(X))(Eh(X))$$
+$E(g(X)h(X))\ge(Eg(X))(Eh(X))$
 
 
 ### 4.E
 
-4.E.40 Dirichlet distribution {#Dirichlet}
-
+#### 4.E.40 Dirichlet distribution {#Dirichlet}
 $f(x,y)=Cx^{a-1}y^{b-1}(1-x-y)^{c-1}$
 
 # 5. Properties of a Random Sample {#samp}
@@ -2866,26 +2870,25 @@ Proof
 
 Let $g(a)=\sum_{i=1}^n(X_i-a)^2$, set
 
-$$g'(a)=\sum_{i=1}^n2(X_i-a)(-1)=0\implies a=\frac1n\sum_{i=1}^nX_i=\bar x$$
+$g'(a)=\sum_{i=1}^n2(X_i-a)(-1)=0\implies a=\frac1n\sum_{i=1}^nX_i=\bar x$
 
-$$(n-1)s^2=\sum_{i=1}^n(x_i-\bar x)^2=\sum_{i=1}^nx_i^2-n\bar x^2$$
+$(n-1)s^2=\sum_{i=1}^n(x_i-\bar x)^2=\sum_{i=1}^nx_i^2-n\bar x^2$
 
 **Lemma 5.2.5** 
 
-$$(5.2.1)\quad E\left(\sum_{i=1}^ng(X_i) \right)=nE(g(X_1))$$
+$(5.2.1)\quad E\left(\sum_{i=1}^ng(X_i) \right)=nE(g(X_1))$
 (5.2.1) is true for any collection of n identically distributed random variables.
 
-$$Var\left(\sum_{i=1}^ng(X_i) \right)=nVar(g(X_1))$$
+$Var\left(\sum_{i=1}^ng(X_i) \right)=nVar(g(X_1))$
 
 **Theorem 5.2.6** 
 
-$$E\bar X=\mu$$
-$$Var\bar X=\frac{\sigma^2}n$$
-$$ES^2=\sigma^2$$
+$E\bar X=\mu$;
+$Var\bar X=\frac{\sigma^2}n$;
+$ES^2=\sigma^2$
 
 **Theorem 5.2.7** 
-
-$$M_{\bar X}(t)=[M_X(\frac{t}n)]^n$$
+$M_{\bar X}(t)=[M_X(\frac{t}n)]^n$
 
 **Example 5.2.8 (Distribution of the mean)** Let $X_1,..,X_n$ be a random sample from a $n(\mu,\sigma^2)$ population. Then the mgf of the sample mean is
 
@@ -2925,11 +2928,11 @@ $$ f_{\chi^2}(x)=\frac{x^{\frac{p}2-1}}{\Gamma \frac{p}2 2^{\frac{p}2}}e^{-\frac
 
 ### 5.3.2 The Derived Distributions: Student's t and Snedecor's F
 
-**Definition 5.3.4** {#T}
+#### **Definition 5.3.4** {#T}
 
 $$f_{T}(x)=\frac{\Gamma(\frac{p+1}2)}{\Gamma(\frac{p}2)\sqrt{p\pi}}\left (1+\frac{x^2}{p}\right)^{-\frac{p+1}2},-\infty<x<\infty$$
 
-**Definition 5.3.6** {#F}
+#### **Definition 5.3.6** {#F}
 
 $$f_{F}(x)=\frac{\Gamma(\frac{p+q}2)}{\Gamma(\frac{p}2)\Gamma (\frac{q}2)}(\frac{p}q)^{\frac{p}2}\frac{x^{\frac{p}2-1}}{(1+\frac{p}qx)^{\frac{p+q}2}}, x>0$$
 
@@ -3011,7 +3014,7 @@ that is, $\bar X_n$ converges almost surely to $\mu$
 $$\lim_{n\to\infty}F_{X_n}(x)=F_X(x)$$
 at all points $x$ where $F_X(x)$ is continuous.
 
-**Example 5.5.11 (Maximum of uniforms)** {#Max-Unif}
+#### **Example 5.5.11 (Maximum of uniforms)** {#Max-Unif}
 
 $P(|y_{(n)}-1|\ge\varepsilon)=(1-\varepsilon)^n$
 
@@ -3023,7 +3026,7 @@ $P(y_{(n)}\le1-t/n)=P(n(1-y_n)\ge t)\to 1-e^{-t}$
 
 **Theorem 5.5.13** 
 
-**Theorem 5.5.14 (Central Limit Theorem)** {#CLT}
+#### **Theorem 5.5.14 (Central Limit Theorem)** {#CLT}
 
 $\frac{\sqrt n(\bar X_n-\mu)}{\sigma}\overset{D}{\to}N(0,1)$
 
@@ -3063,7 +3066,7 @@ $\frac{\sqrt n(\bar X_n-\mu)}{\sigma}\overset{D}{\to}N(0,1)$
 
 ### 5.6.1 Direct Methods
 
-**Example 5.6.1 (Exponential lifetime)** {#lifetime}
+#### **Example 5.6.1 (Exponential lifetime)** {#lifetime}
 
 **Example 5.6.2 (Continuation of Example 5.6.1)**
 
@@ -3112,10 +3115,13 @@ $$f(\mathbf{x}|\theta)=\prod_{i=1}^nf(x_i)=\prod_{i=1}^nf(x_{(i)})$$
 
 where $x_{(1)}\le x_{(2)}\le...\le x_{(n)}$ are the order statistics.
 
-**Theorem 6.2.6 (Factorization Theorem)** {#Facto} Let $f(\mathbf{x}|\theta)$ denote the joint pdf or
+#### **Theorem 6.2.6 (Factorization Theorem)** {#Facto} 
+
+Let $f(\mathbf{x}|\theta)$ denote the joint pdf or
 pmf of a sample $\mathbf{X}$. A statistic $T(\mathbf{X})$ is a sufficient statistic for $\theta$ if and only if there exist functions $g(x|\theta)$ and $h(\mathbf{x})$ such that, for all sample points $\mathbf{x}$ and all parameter points $\theta$,
 
-$$f(\mathbf{x}|\theta)= g(T(\mathbf{x})|\theta)h(\mathbf{x})$$
+$f(\mathbf{x}|\theta)= g(T(\mathbf{x})|\theta)h(\mathbf{x})$
+
 **Example 6.2.8 (Uniform sufficient statistic)**
 
 **Example 6.2.9 (Normal sufficient statistic, both parameters unknown)**
@@ -3132,13 +3138,17 @@ $$f(\mathbf{x}|\theta)= g(T(\mathbf{x})|\theta)h(\mathbf{x})$$
 
 ### 6.2.4 Sufficient, Ancillary, and Complete Statistics
 
-**Definition 6.2.21** {#comp} Let $f(x|\theta)$ be a family of pdfs or pmfs for a statistic $T(\vec X)$. The family of probability distributions is called complete if $E_\theta[g(T)]=0, \forall\theta$ implies $P_\theta(g(T)=0)=1$ for all $\theta$. Equivalently, $T(\vec X)$ is called a _complete statistic_.
+#### **Definition 6.2.21** {#comp} 
+
+Let $f(x|\theta)$ be a family of pdfs or pmfs for a statistic $T(\vec X)$. The family of probability distributions is called complete if $E_\theta[g(T)]=0, \forall\theta$ implies $P_\theta(g(T)=0)=1$ for all $\theta$. Equivalently, $T(\vec X)$ is called a _complete statistic_.
 
 **Example 6.2.22 (Binomial complete sufficient statistic)**
 
 **Example 6.2.23 (Uniform complete sufficient statistic)**
 
-**Theorem 6.2.24 (Basu's Theorem)** {#Basu} If $T(\mathbf{X})$ is a complete and minimal sufficient statistic, then $T(\mathbf{X})$ is independent of every ancillary statistic.
+#### **Theorem 6.2.24 (Basu's Theorem)** {#Basu} 
+
+If $T(\mathbf{X})$ is a complete and minimal sufficient statistic, then $T(\mathbf{X})$ is independent of every ancillary statistic.
 
 **Theorem 6.2.25 (Complete statistics in the exponential family)**
 
@@ -3268,14 +3278,14 @@ $$L\left(\hat\theta^{(r+1)}|y\right)\ge L\left(\hat\theta^{(r)}|y\right)$$
 
 ## 7.3 Methods of Evaluating Estimators
 
-### 7.3.1 Mean Squared Error
+### 7.3.1 Mean Squared Error {#MSE}
 
-**Definition 7.3.1** The mean squared error (MSE) {#MSE} of an estimator $W$ of a parameter $\theta$ is the function of $\theta$ defined by $E_{\theta}(W-\theta)^2$.
+**Definition 7.3.1** The mean squared error (MSE) of an estimator $W$ of a parameter $\theta$ is the function of $\theta$ defined by $E_{\theta}(W-\theta)^2$.
 
-$$E_{\theta}(W-\theta)^2=Var_{\theta}W+(E_{\theta}W-\theta)^2=Var_{\theta}W+(Bias_{\theta}W)^2$$
+$E_{\theta}(W-\theta)^2=Var_{\theta}W+(E_{\theta}W-\theta)^2=Var_{\theta}W+(Bias_{\theta}W)^2$
 
-
-**Definition 7.3.2** {#bias} {#unbias} The _bias_ of a point estimator $W$ of a parameter $\theta$ is the difference between the expected value of $W$ and  $\theta$; that is, $Bias_{\theta}W=E_{\theta}W-\theta$. An estimator whose bias is identically (in a) equal to 0 is called _unbiased_ and satisfies $E_{\theta}W=\theta$ for all $\theta$.
+#### **Definition 7.3.2** {#bias} {#unbias} 
+The _bias_ of a point estimator $W$ of a parameter $\theta$ is the difference between the expected value of $W$ and  $\theta$; that is, $Bias_{\theta}W=E_{\theta}W-\theta$. An estimator whose bias is identically (in a) equal to 0 is called _unbiased_ and satisfies $E_{\theta}W=\theta$ for all $\theta$.
 
 For an unbiased estimator we have
 $$E_{\theta}(W-\theta)^2=Var_{\theta}W$$
@@ -3313,11 +3323,13 @@ $$(7.3.3)\quad E_\theta(W(X_1,..,X_n)-\theta)^2=\idotsint^\infty_{-\infty}(W(u_1
 
 ### 7.3.2 Best Unbiased Estimators
 
-**Definition 7.3.7** {#UMVUE} An estimator $W^*$ is a best unbiased estimator of $\tau(\theta)$ if it satisfies $E_\theta{W^*}=\tau(\theta)$ for all $\theta$ and, for any other estimator $W$ with $E_\theta{W}=\tau(\theta)$, we have Vare $Var_\theta{W^*}<Var_\theta{W}$ for all $\theta$. $W^*$ is also called a _uniform minimum variance unbiased estimator_ (UMVUE) of $\tau(\theta)$.
+#### **Definition 7.3.7** {#UMVUE} 
+An estimator $W^*$ is a best unbiased estimator of $\tau(\theta)$ if it satisfies $E_\theta{W^*}=\tau(\theta)$ for all $\theta$ and, for any other estimator $W$ with $E_\theta{W}=\tau(\theta)$, we have Vare $Var_\theta{W^*}<Var_\theta{W}$ for all $\theta$. $W^*$ is also called a _uniform minimum variance unbiased estimator_ (UMVUE) of $\tau(\theta)$.
 
 **Example 7.3.8 (Poisson unbiased estimation)**
 
-**Theorem 7.3.9 ( Cramer-Rao Inequality)** {#CRLB} Let $X_1,..,X_n$ be a sample with pdf $f(\vec x|\theta)$, and let $W(\vec X)=W(X_1,..,X_n)$ be any estimator satisfying
+#### **Theorem 7.3.9 (Cramer-Rao Inequality)** {#CRLB} 
+Let $X_1,..,X_n$ be a sample with pdf $f(\vec x|\theta)$, and let $W(\vec X)=W(X_1,..,X_n)$ be any estimator satisfying
 
 $$\frac{d}{d\theta}E_\theta W(\vec X)=\int_{\mathcal{X}}\frac{\partial}{\partial\theta}\left[W(\vec x)f(\vec x|\theta)\right]d\vec x,\quad Var_\theta W(\vec X)<\infty$$
 
@@ -3327,12 +3339,12 @@ $$Var_\theta W(\vec X)\ge\frac{(\frac{d}{d\theta}E_\theta W(\vec X))^2}{E_\theta
 
 $$Var_\theta W(\vec X)\ge\frac{(\frac{d}{d\theta}E_\theta W(\vec X))^2}{nE_\theta\left[(\frac{\partial}{\partial\theta}\ln f(X|\theta))^2\right]}$$
 
-**Lemma 7.3.11 Fisher information** {#FishI} If $f(x|\theta)$ satisfies
-
-$$\frac{d}{d\theta}E_\theta\left[\frac{\partial}{\partial\theta}\ln f(X|\theta)\right]=\int\frac{\partial}{\partial\theta}\left(\left[\frac{\partial}{\partial\theta}\ln f(x|\theta)\right]f(x|\theta)\right)dx$$
+#### **Lemma 7.3.11 Fisher information** {#FishI} 
+If $f(x|\theta)$ satisfies
+$\frac{d}{d\theta}E_\theta\left[\frac{\partial}{\partial\theta}\ln f(X|\theta)\right]=\int\frac{\partial}{\partial\theta}\left(\left[\frac{\partial}{\partial\theta}\ln f(x|\theta)\right]f(x|\theta)\right)dx$
 (true for an exponential family), then
 
-$$E_\theta\left[(\frac{\partial}{\partial\theta}\ln f(X|\theta))^2\right]=-E_\theta\left[\frac{\partial^2}{\partial\theta^2}\ln f(X|\theta)\right]$$
+$E_\theta\left[(\frac{\partial}{\partial\theta}\lnf(X|\theta))^2\right]=-E_\theta\left[\frac{\partial^2}{\partial\theta^2}\ln f(X|\theta)\right]$
 
 **Example 7.3.12 ( Conclusion of Example 7.3.8)**
 
@@ -3346,9 +3358,11 @@ $$E_\theta\left[(\frac{\partial}{\partial\theta}\ln f(X|\theta))^2\right]=-E_\th
 
 ### 7.3.3 Sufficiency and Unbiasedness
 
-**Theorem 7.3. 17 (Rao-Blackwell)** {#Rao-Bla}Let $W$ be any unbiased estimator of $\tau(\theta)$, and let $T$ be a sufficient statistic for $\theta$. Define $\phi(T)=E[W|T]$. Then $E_{\theta}\phi(T)=\tau(\theta)$ and $Var_{\theta}\phi(T)\le Var_{\theta}(W)$ for all $\theta$; that is, $\phi(T)$ is a uniformly better unbiased estimator of $\tau(\theta)$.
+#### **Theorem 7.3. 17 (Rao-Blackwell)** {#Rao-Bla}
+Let $W$ be any unbiased estimator of $\tau(\theta)$, and let $T$ be a sufficient statistic for $\theta$. Define $\phi(T)=E[W|T]$. Then $E_{\theta}\phi(T)=\tau(\theta)$ and $Var_{\theta}\phi(T)\le Var_{\theta}(W)$ for all $\theta$; that is, $\phi(T)$ is a uniformly better unbiased estimator of $\tau(\theta)$.
  
-**Theorem 7.3.23 Lehmann-Scheffe** {#Lehm-Sche} Let $T$ be a complete sufficient statistic for a parameter $\theta$, and let $\phi(T)$ be any estimator based only on $T$. Then $\phi(T)$ is the unique best unbiased estimator of its expected value.
+#### **Theorem 7.3.23 Lehmann-Scheffe** {#Lehm-Sche} 
+Let $T$ be a complete sufficient statistic for a parameter $\theta$, and let $\phi(T)$ be any estimator based only on $T$. Then $\phi(T)$ is the unique best unbiased estimator of its expected value.
 
 ### 7.3.4 Loss Function Optimality
 
@@ -3381,12 +3395,14 @@ where $c$ is a positive constant. As the constant $c$ varies, the loss function 
 
 ## 8.1 Introduction
 
-**Definition 8.1.3 Hypothesis Test** {#HypoT}
+#### **Definition 8.1.3 Hypothesis Test** {#HypoT}
 
 ## 8.2 Methods of Finding Tests
 ###8.2.1 Likelihood Ratio Tests
 
-**Definition 8.2.1 The likelihood ratio test** {#LRT} statistic for testing $H_0:\theta\in\Theta_0$ versus $H_1:\theta\ne\in\Theta_0^c$ is
+#### **Definition 8.2.1 The likelihood ratio test** {#LRT} 
+
+statistic for testing $H_0:\theta\in\Theta_0$ versus $H_1:\theta\ne\in\Theta_0^c$ is
 
 $$\lambda(\vec x)=\frac{\sup\limits_{\Theta_0} L(\theta|\vec x)}{\sup\limits_{\Theta} L(\theta|\vec x)}$$
 
@@ -3396,7 +3412,7 @@ Example 8.2.2 (Normal LRT)
 
 Example 8.2.3 (Exponential LRT)
 
-Theorem 8.2.4 {#suff&LRT}
+#### Theorem 8.2.4 {#suff&LRT}
 
 **Example 8.2.5 (LRT and sufficiency)** 
 
@@ -3404,14 +3420,14 @@ Example 8.2.6 (Normal LRT with unknown variance)
 
 ### 8.2.2 Bayesian Tests {#BayesT}
 
-**Example 8.2.7 (Normal Bayesian test)** {#Norm&Bayes}
+#### **Example 8.2.7 (Normal Bayesian test)** {#Norm&Bayes}
 
 ### 8.2.3 Union-Intersection and Intersection- Union Tests
 
 ## 8.3 Methods o f Evaluating Tests
 ### 8.3.1 Error Probabilities and the Power Function
 
-**Definition 8.3.1 power function** {#power}
+#### **Definition 8.3.1 power function** {#power}
 
 Example 8.3.2 (Binomial power function)
 
@@ -3427,28 +3443,29 @@ Example 8.3.7 (Size of LRT)
 
 #### **Definition 8.3.11 uniformly most powerful**   {#UMP}
 
-**Theorem 8.3.12 (Neyman-Pearson Lemma)** {#Neym-Pear}
+#### **Theorem 8.3.12 (Neyman-Pearson Lemma)** {#Neym-Pear}
 
 **Corollary 8.3.13** Consider the hypothesis problem posed in **Theorem 8.3.12**. Suppose $T(\vec X)$ is a sufficient statistic for $\theta$ and $g(t|\theta_i)$ is the pdf or pmf of $T$ corresponding to $\theta_i,i=0,1$. Then any test based on $T$ with rejection region $S$ (a subset of the sample space of T) is a UMP level a test if it satisfies 
-$$t\in S\ \text{ if }\ g(t|\theta_1)>kg(t|\theta)$$
+$t\in S\ \text{ if }\ g(t|\theta_1)>kg(t|\theta)$
 and
-$$t\in S^c\ \text{ if }\ g(t|\theta_1)<kg(t|\theta)$$
+$t\in S^c\ \text{ if }\ g(t|\theta_1)<kg(t|\theta)$
 for some $k\ge 0$, where $\alpha=P_{\theta_0}(T\in S)$
 
 Example 8.3.14 (UMP binomial test)
 
 Example 8.3.15 (UMP normal test)
 
-Definition 8.3.16 monotone likelihood ratio {#MLR}
+#### Definition 8.3.16 monotone likelihood ratio {#MLR}
 
-**Theorem 8.3.17 (Karlin-Rubin)** {#Kar-Rub} Consider testing $H_0:\theta\le\theta_0$ versus $H_1:\theta>\theta_0$. Suppose that T is a sufficient statistic for $\theta$ and the family of pdfs or pmfs $\{g(t|\theta):\theta\in\Theta\}$ of $T$ has an MLR. Then for any $t_0$, the test that rejects $H_0$ if and only if $T>t_0$ is a UMP level $\alpha$ test, where $\alpha= P_{\theta_0}(T>t_0)$.
+#### **Theorem 8.3.17 (Karlin-Rubin)** {#Kar-Rub} 
+Consider testing $H_0:\theta\le\theta_0$ versus $H_1:\theta>\theta_0$. Suppose that T is a sufficient statistic for $\theta$ and the family of pdfs or pmfs $\{g(t|\theta):\theta\in\Theta\}$ of $T$ has an MLR. Then for any $t_0$, the test that rejects $H_0$ if and only if $T>t_0$ is a UMP level $\alpha$ test, where $\alpha= P_{\theta_0}(T>t_0)$.
 
 
 Example 8.3.19 (Nonexistence of UMP test)
 
 Example 8.3.20 (Unbiased test)
 
-### 8.3.3 Sizes of Union-Intersection and Intersection􀇽Union Tests
+### 8.3.3 Sizes of Union-Intersection and Intersection Union Tests
 
 Theorem 8.3.23 the size of the test
 
@@ -3466,7 +3483,7 @@ Example 8.3.29 (One-sided normal p-value)
 
 ## 9.1 Introduction
 
-**Definition 9.1.5 confidence coefficient; confidence interval** {#CI}
+#### **Definition 9.1.5 confidence coefficient; confidence interval** {#CI}
 
 ## 9.2 Methods of Finding Interval Estimators
 
@@ -3478,9 +3495,9 @@ Example 8.3.29 (One-sided normal p-value)
 ## 10.1 Point Estimation
 ### 10.1.1 Consistency
 
-**Definition 10.1.1 (consistent sequence of estimators)**  {#consi-Seq-E}
+#### **Definition 10.1.1 (consistent sequence of estimators)**  {#consi-Seq-E}
 
-**Example 10.1.2 (Consistency of $\bar X$)** {#consi-M}
+#### **Example 10.1.2 (Consistency of $\bar X$)** {#consi-M}
 
 **Theorem 10.1.3**
 
@@ -3488,19 +3505,19 @@ Example 8.3.29 (One-sided normal p-value)
 
 **Theorem 10.1.5**
 
-**Theorem 10. 1 .6 (Consistency of MLEs)** {#consi-MLE}
+#### **Theorem 10. 1 .6 (Consistency of MLEs)** {#consi-MLE}
 
 ### 10.1.2 Efficiency
 
 **Definition 10.1.7**
 
-**Example 10.1.8 (Limiting variances)** {#LimD}
+#### **Example 10.1.8 (Limiting variances)** {#LimD}
 
-**Definition 10.1.9 asymptotic variance** {#asymV}
+#### **Definition 10.1.9 asymptotic variance** {#asymV}
 
-**Definition 10.1.11** {#effi}
+#### **Definition 10.1.11** {#effi}
 
-**Theorem 10.1.12 (Asymptotic efficiency of MLEs)** {#asymE}
+#### **Theorem 10.1.12 (Asymptotic efficiency of MLEs)** {#asymE}
 
 
 
