--- a/static/stat563/qe_math_stat.Rmd
+++ b/static/stat563/qe_math_stat.Rmd
@@ -39,7 +39,18 @@ header-includes:
 - \usepackage{caption}
 - \captionsetup{skip=2pt,labelsep=space,justification=justified,singlelinecheck=off}
 
-
+<style>
+  .col2 {
+    columns: 2 200px;         /* number of columns and width in pixels*/
+    -webkit-columns: 2 200px; /* chrome, safari */
+    -moz-columns: 2 200px;    /* firefox */
+  }
+  .col3 {
+    columns: 3 100px;
+    -webkit-columns: 3 100px;
+    -moz-columns: 3 100px;
+  }
+</style>
 
 ```{r setup, include=F}
 knitr::opts_chunk$set(message=FALSE, warning=F, echo=TRUE)
@@ -53,6 +64,8 @@ options(repos="https://cran.rstudio.com")
 
 ### 2000F1
 
+<div class="col3">
+
 Suppose $X\sim Poisson(\lambda)$.
 
 A) Find $E[X]$
@@ -61,10 +74,15 @@ B) Find $E[X(X − 1)]$
 
 C) Find $E[X(X − 1)(X − 2)]$
 
+</div>
+
 ### 2000F2
 
+<div class="col2">
 
 Suppose X1 and X2 are independent random variables with $X_1\sim Poisson(\lambda_1),X_2\sim Poisson(\lambda_2)$. Prove that $X_1+X_2\sim Poisson(\lambda_1+\lambda_2)$.
+
+</div>
 
 ### 2000F3
 [2003F6][]
